[gd_scene load_steps=11 format=3 uid="uid://dmsltaqx2b7d"]

[ext_resource type="PackedScene" uid="uid://bun6vd7l4s81f" path="res://data/models/characters/rat/ratChunk.glb" id="1_qaku7"]
[ext_resource type="Script" path="res://src/characters/rat/gore_chunk.gd" id="2_ij2a8"]
[ext_resource type="PackedScene" uid="uid://b1xk1udv80ae3" path="res://scenes/held_itens/guns/m1garand/decal_blood_splatter.tscn" id="3_ytx4i"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_qg8qg"]
friction = 0.75
bounce = 0.65

[sub_resource type="SphereShape3D" id="SphereShape3D_2qupg"]
radius = 1.5

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_sgx58"]
gravity = Vector3(0, 10, 0)
attractor_interaction_enabled = false

[sub_resource type="SphereMesh" id="SphereMesh_iy6xt"]
radial_segments = 4
rings = 1

[sub_resource type="Curve" id="Curve_54avx"]
_data = [Vector2(0, 1), 0.0, -1.06431, 0, 0, Vector2(1, 0), -1.60606, 0.0, 0, 0]
point_count = 2

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_1e4cj"]
texture_filter = 2
use_particle_trails = true

[sub_resource type="RibbonTrailMesh" id="RibbonTrailMesh_87n3r"]
material = SubResource("StandardMaterial3D_1e4cj")
size = 2.336
section_length = 0.389
curve = SubResource("Curve_54avx")

[node name="ratChunk" node_paths=PackedStringArray("rigidbody") instance=ExtResource("1_qaku7")]
script = ExtResource("2_ij2a8")
blood_splatter = ExtResource("3_ytx4i")
rigidbody = NodePath("RatChunk")

[node name="RatChunk" parent="." index="0"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0.00862694, 0, -0.0130892)
collision_layer = 8
mass = 2.0
physics_material_override = SubResource("PhysicsMaterial_qg8qg")
max_contacts_reported = 1
contact_monitor = true

[node name="RatChunk" parent="RatChunk" index="0"]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0, 0, 0)

[node name="CollisionShape3D" parent="RatChunk" index="1"]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0, 0.1, 0)
shape = SubResource("SphereShape3D_2qupg")

[node name="GPUParticles3D" type="GPUParticles3D" parent="RatChunk" index="2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.1, 0)
visible = false
amount = 1
lifetime = 4.0
visibility_aabb = AABB(-0.18207, -0.2, -0.001, 0.36414, 0.4, 0.002)
local_coords = true
draw_order = 1
transform_align = 2
trail_enabled = true
trail_lifetime = 4.0
process_material = SubResource("ParticleProcessMaterial_sgx58")
draw_passes = 2
draw_pass_1 = SubResource("SphereMesh_iy6xt")
draw_pass_2 = SubResource("RibbonTrailMesh_87n3r")

[node name="Timer" type="Timer" parent="RatChunk" index="3"]
wait_time = 5.0
one_shot = true
autostart = true

[connection signal="body_entered" from="RatChunk" to="." method="_on_rat_chunk_body_entered"]
[connection signal="timeout" from="RatChunk/Timer" to="." method="_on_timer_timeout"]
